update index.html: header & NZ work

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Mason Inman</h1>
+<h2>energy analyst, data scientist, and writer</h2>
+<h3>work as an energy analyst and data scientist</h3>
+<p>**Near Zero, May 2016 to September 2019 (full-time)**</p>
+<p>Lead analyst and programmer for energy policy analyses. Involved data gathering, Python coding for analyses and 
+    model-building, writing reports and press releases, website design and maintenance.</p>
+
+<p>**Near Zero, March 2012 to May 2016 (part-time)**</p>
+<p>Director of communications, and involved with expert elicitations on energy technologies, including elicitation design, 
+    analysis of results, and writing reports.</p>
+<p></p>
 </body>
 </html>
