--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <h1>Mason Inman</h1>
 <h2>energy analyst, data scientist, and writer</h2>
 <h3>work as an energy analyst and data scientist</h3>
-<p><b>Near Zero, May 2016 to September 2019 (full-time)**</b></p>
+<p><b>Near Zero, May 2016 to September 2019 (full-time)</b></p>
 <p>Lead analyst and programmer for energy policy analyses. Involved data gathering, Python coding for analyses and 
     model-building, writing reports and press releases, website design and maintenance.</p>
 
-<p><b>Near Zero, March 2012 to May 2016 (part-time)**</b></p>
+<p><b>Near Zero, March 2012 to May 2016 (part-time)</b></p>
 <p>Director of communications, and involved with expert elicitations on energy technologies, including elicitation design, 
     analysis of results, and writing reports.</p>
 <p></p>
